Fix issue with header links not appearing on iOS 8

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -278,6 +278,10 @@ hr.double {
       border-color: $dark-grey;
       color: $white;
     }
+
+    ul {
+      font-size: $font-size-smallish;
+    }
   }
 }
 
